[project]
name = "gtmorphtest"
version = "0.1.0"
description = "Morphological FST testing for HFST automata and YAML test descriptions"
authors = [
    {name = "Brenadan Molloy"},
    {name = "Sjur N Moshagen"},
    {name = "Jonathan Washington"},
    {name = "Daniel Swanson"},
    {name = "Flammie A Pirinen",email = "flammie@iki.fi"}
]
license = {text = "CC0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gtmorphtest = "gtmorphtest.gtmorphtest:main"
