[tool.poetry]
name = "gtmorphtest"
version = "0.1.0"
description = "Morphological FST testing for HFST automata and YAML test descriptions"
authors = [
    "Brendan Molloy",
    "Sjur N Moshagen <sjurnm@mac.com>",
    "Jonathan Washington",
    "Daniel Swanson",
    "Flammie A Pirinen <flammie@iki.fi>"
]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = ">=6.0.2,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gtmorphtest = "gtmorphtest.gtmorphtest:main"
